# candy-blocks

./: Cargo.toml
.github/workflows/: release.yml
src/: brick.rs  camera_controller.rs  level.rs  lib.rs  main.rs  menu.rs
src/brick/: materials.rs  parsing.rs
