[package]
name = "candy-blocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
itertools = "0.12.0"
nom = "7.1.3"
thiserror = "1.0.50"
nom-supreme = "0.8.0"
bevy = "0.12"
rand = "0.8.5"
# bevy_basic_camera = { git = "https://github.com/DGriffin91/bevy_basic_camera" }
bevy_xpbd_3d = { version = "0.3", features = ["simd"] }
# bevy_xpbd_3d = { path = "./vendor/bevy_xpbd/crates/bevy_xpbd_3d", features = [
#     "simd",
# ] }
bevy_tweening = "0.9"
bevy_mod_picking = { version = "0.17", features = ["highlight"] }

[dev-dependencies]
rstest = "0.18.2"
rstest_reuse = "0.6.0"
test-log = { version = "0.2.13", default-features = false, features = [
    "trace",
] }
